[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-flow"
version = "0.3.0"
description = "Decorator-based Slurm DAG engine with Typer CLI, cancel, retry, and status tracking"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "SQLAlchemy>=2.0",
  "typer>=0.9",
]

[project.optional-dependencies]
postgresql = [
  "psycopg[binary]>=3.1",
]
mariadb = [
  "mariadb>=1.1",
]
dev = [
  "pytest>=7",
  "pytest-cov",
  "ruff",
  "mypy",
]

[tool.setuptools.packages.find]
include = ["slurm_flow*"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
